feat: Add PostgreSQL database configuration and update dependencies
- Configure PostgreSQL connection in `application.properties`
- Add guides for database setup in `README.md`
- Replace MySQL with PostgreSQL dependency in `build.gradle`
- Add Spring Boot dependencies for web, security, and dev tools
- Configure HikariCP connection pool and Hibernate settings for improved performance and debugging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 # -----------------------------
 # Using environment variables for sensitive information
 # These can be set in the environment or in a .env file
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/football_stats}
-spring.datasource.username=${POSTGRES_USERNAME:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate / JPA Configuration
