feat: Add PostgreSQL database configuration and update dependencies
- Configure PostgreSQL connection in `application.properties`
- Add guides for database setup in `README.md`
- Replace MySQL with PostgreSQL dependency in `build.gradle`
- Add Spring Boot dependencies for web, security, and dev tools
- Configure HikariCP connection pool and Hibernate settings for improved performance and debugging

--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,9 @@ dependencies {
     // Spring Boot dependencies
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
+    
     runtimeOnly 'org.postgresql:postgresql'
 
     // Jackson for JSON processing
@@ -39,4 +40,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+bootRun {
+    // Enable interactive mode for the bootRun task
+    standardInput = System.in
 }
