feat: Add database connection tester and restructure main application
- Introduce `DatabaseConnectionTester` to validate PostgreSQL connection on startup
- Initialize `FootballStatisticsApplication` as the main Spring Boot application
- Update `.env.example` with PostgreSQL environment variable placeholders
- Simplify Hibernate naming strategy configuration in `application.properties`
- Set main classes for `run` and `bootRun` tasks in `build.gradle`

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,12 @@ plugins {
 }
 
 application {
-    mainClassName = 'com.hyperskill.Main'  // Make sure this is your main class path
+    mainClassName = 'com.hyperskill.Main'  // Original main class for 'run' task
+}
+
+// Configure Spring Boot main class for bootRun task
+springBoot {
+    mainClass = 'com.hyperskill.FootballStatisticsApplication'
 }
 
 group = 'com.hyperskill'
@@ -22,7 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    
+
     runtimeOnly 'org.postgresql:postgresql'
 
     // Jackson for JSON processing
@@ -44,5 +49,6 @@ test {
 
 bootRun {
     // Enable interactive mode for the bootRun task
+    mainClass = 'com.hyperskill.FootballStatisticsApplication'
     standardInput = System.in
 }
