--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,6 @@ spring.jpa.hibernate.ddl-auto=update
 # PostgreSQL dialect for Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Naming strategy
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-
 # Show SQL statements in logs (useful for debugging)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -49,3 +45,13 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
+
+# Web Server Configuration
+# ----------------------
+# Set server port
+server.port=8080
+
+# Spring Security Configuration
+# ---------------------------
+# Disable Spring Security auto-configuration for development
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
